--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,15 @@ cmake_minimum_required(VERSION 3.5)
 # Set the project name
 project (hello_cmake)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pg")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
+set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")
+
 # Add an executable
 add_executable(hello_cmake main.cpp)
+
+
+
+
+
